--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,15 +8,48 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.5
+  flutter_secure_storage: ^5.1.0
+  shimmer: ^2.0.0
+  badges: ^2.0.3
+  flutter_svg: ^1.1.2
+  awesome_notifications: ^0.6.21
+  loading_animation_widget: ^1.2.0+2
+  dio: ^4.0.6
+  flutter_widget_from_html_core: ^0.8.5+3
+  firebase_core: ^1.20.0
+  firebase_messaging: ^12.0.1
+  firebase_auth: 2.0.0
+  webview_flutter: ^3.0.4
+  readmore: ^2.2.0
+  url_launcher: ^6.1.5
+  image_picker: ^0.8.5+3
   flutter: 
     sdk: flutter
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
   lints: 2.0.0
+  change_app_package_name: ^1.0.0
+  flutter_launcher_icons: "^0.9.2"
+  firebase_messaging_platform_interface: ^4.1.0
   flutter_test: 
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logos/your-app-logo.png"
 
 flutter: 
   uses-material-design: true
 
+  assets:
+    - assets/images/
+    - assets/logos/
+    - assets/icons/
+    - assets/videos/
+
+  fonts:
+    - family: font_name
+      fonts:
+        - asset: assets/fonts/your-font-name.ttf
