--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,10 +39,11 @@ android {
         applicationId "com.me.architecture.flutter_architecture"
         // You can update the following values to match your application needs. 
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        compileSdkVersion 33
     }
 
     buildTypes {
