--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   readmore: ^2.2.0
   url_launcher: ^6.1.5
   image_picker: ^0.8.5+3
+  string_validator: ^0.3.0
   flutter: 
     sdk: flutter
 
@@ -52,4 +53,4 @@ flutter:
   fonts:
     - family: font_name
       fonts:
-        - asset: assets/fonts/your-font-name.ttf
+        - asset: assets/fonts/font-regular.ttf
